@@ -1,11 +1,11 @@
 /*
- * Copyright © Wynntils 2023.
+ * Copyright © Wynntils 2023-2024.
  * This file is released under LGPLv3. See LICENSE for full license details.
  */
 package com.wynntils.features.combat;
 
 import com.mojang.blaze3d.systems.RenderSystem;
-import com.mojang.blaze3d.vertex.BufferBuilder;
+import com.mojang.blaze3d.vertex.ByteBufferBuilder;
 import com.mojang.blaze3d.vertex.PoseStack;
 import com.mojang.blaze3d.vertex.VertexConsumer;
 import com.wynntils.core.components.Models;
@@ -28,19 +28,20 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
+import java.util.stream.Collectors;
 import net.minecraft.client.gui.screens.ChatScreen;
 import net.minecraft.client.player.AbstractClientPlayer;
 import net.minecraft.client.renderer.MultiBufferSource;
 import net.minecraft.core.Position;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
-import net.minecraftforge.eventbus.api.SubscribeEvent;
+import net.neoforged.bus.api.SubscribeEvent;
 import org.joml.Matrix4f;
 
 @ConfigCategory(Category.COMBAT)
 public class RangeVisualizerFeature extends Feature {
     private static final MultiBufferSource.BufferSource BUFFER_SOURCE =
-            MultiBufferSource.immediate(new BufferBuilder(256));
+            MultiBufferSource.immediate(new ByteBufferBuilder(256));
 
     // number of straight lines to draw when rendering circle, higher = smoother but more expensive
     private static final int SEGMENTS = 128;
@@ -120,19 +121,32 @@ public class RangeVisualizerFeature extends Feature {
         // Offset the radius slightly so multiple circles can be shown for each player
         // Only a few major IDs can actually be applied at the same time, but we make this general
         List<Pair<CustomColor, Float>> circles = validGear.stream()
-                .flatMap(gearInfo -> gearInfo.fixedStats().majorIds().stream().map(majorId -> switch (majorId.name()) {
-                    case "Taunt" -> Pair.of(CommonColors.ORANGE.withAlpha(TRANSPARENCY), 12f);
-                    case "Saviour’s Sacrifice" -> Pair.of(CommonColors.WHITE.withAlpha(TRANSPARENCY), 8f);
-                    case "Heart of the Pack" -> Pair.of(CommonColors.PINK.withAlpha(TRANSPARENCY), 8.1f);
-                    case "Guardian" -> Pair.of(CommonColors.RED.withAlpha(TRANSPARENCY), 7.9f);
-                    default -> null;
-                }))
+                .flatMap(gearInfo ->
+                        gearInfo.fixedStats().majorIds().stream().map(majorId -> getCircleFromMajorId(majorId.name())))
                 .filter(Objects::nonNull)
-                .toList();
+                .collect(Collectors.toList());
+
+        // add circles gained from raid major id buffs
+        if (Models.Raid.getCurrentRaid() != null) {
+            Models.Raid.getRaidMajorIds(player.getName().getString()).stream()
+                    .map(this::getCircleFromMajorId)
+                    .filter(Objects::nonNull)
+                    .forEach(circles::add);
+        }
 
         if (!circles.isEmpty()) {
             circlesToRender.put(player, circles);
         }
+    }
+
+    private Pair<CustomColor, Float> getCircleFromMajorId(String majorIdName) {
+        return switch (majorIdName) {
+            case "Taunt" -> Pair.of(CommonColors.ORANGE.withAlpha(TRANSPARENCY), 12f);
+            case "Saviour’s Sacrifice" -> Pair.of(CommonColors.WHITE.withAlpha(TRANSPARENCY), 8f);
+            case "Heart of the Pack" -> Pair.of(CommonColors.PINK.withAlpha(TRANSPARENCY), 8.1f);
+            case "Guardian" -> Pair.of(CommonColors.RED.withAlpha(TRANSPARENCY), 7.9f);
+            default -> null;
+        };
     }
 
     private GearInfo getOtherPlayerGearInfo(ItemStack itemStack) {
@@ -173,17 +187,13 @@ public class RangeVisualizerFeature extends Feature {
             }
             float x = (float) (position.x() + Math.sin(angle) * radius);
             float z = (float) (position.z() + Math.cos(angle) * radius);
-            consumer.vertex(matrix4f, x, (float) position.y(), z).color(color).endVertex();
-            consumer.vertex(matrix4f, x, (float) position.y() + HEIGHT, z)
-                    .color(color)
-                    .endVertex();
+            consumer.addVertex(matrix4f, x, (float) position.y(), z).setColor(color);
+            consumer.addVertex(matrix4f, x, (float) position.y() + HEIGHT, z).setColor(color);
             angle += angleStep;
             float x2 = (float) (position.x() + Math.sin(angle) * radius);
             float z2 = (float) (position.z() + Math.cos(angle) * radius);
-            consumer.vertex(matrix4f, x2, (float) position.y() + HEIGHT, z2)
-                    .color(color)
-                    .endVertex();
-            consumer.vertex(matrix4f, x2, (float) position.y(), z2).color(color).endVertex();
+            consumer.addVertex(matrix4f, x2, (float) position.y() + HEIGHT, z2).setColor(color);
+            consumer.addVertex(matrix4f, x2, (float) position.y(), z2).setColor(color);
         }
 
         BUFFER_SOURCE.endBatch();
