@@ -28,7 +28,7 @@ import net.minecraft.network.chat.Component;
 import net.minecraft.world.inventory.ChestMenu;
 import net.minecraft.world.inventory.Slot;
 import net.minecraft.world.item.Items;
-import net.minecraftforge.eventbus.api.SubscribeEvent;
+import net.neoforged.bus.api.SubscribeEvent;
 
 @ConfigCategory(Category.INVENTORY)
 public class HightlightDuplicateCosmeticsFeature extends Feature {
@@ -116,7 +116,7 @@ public class HightlightDuplicateCosmeticsFeature extends Feature {
         if (scrapMenu == null) return;
 
         // Silverbull subscribers have the first 2 slots filled automatically
-        List<Integer> selectedSlots = Models.Character.silverbullSubscriber.get()
+        List<Integer> selectedSlots = Models.Character.isSilverbullSubscriber()
                 ? SELECTED_COSMETIC_SLOTS.subList(2, 5)
                 : SELECTED_COSMETIC_SLOTS;
 
@@ -133,7 +133,7 @@ public class HightlightDuplicateCosmeticsFeature extends Feature {
 
             if (selectedCosmetic.equals(ADD_REWARD_TEXT)) {
                 // If the first slot does not have a cosmetic then none are selected
-                if (slot == selectedSlots.get(0)) {
+                if (slot == selectedSlots.getFirst()) {
                     selectedCosmetics = new HashSet<>();
                 }
 
