@@ -1,5 +1,5 @@
 /*
- * Copyright © Wynntils 2022-2023.
+ * Copyright © Wynntils 2022-2024.
  * This file is released under LGPLv3. See LICENSE for full license details.
  */
 package com.wynntils.functions;
@@ -7,10 +7,11 @@ package com.wynntils.functions;
 import com.wynntils.core.components.Models;
 import com.wynntils.core.consumers.functions.Function;
 import com.wynntils.core.consumers.functions.arguments.FunctionArguments;
-import com.wynntils.models.beacons.type.BeaconColor;
+import com.wynntils.models.beacons.type.LootrunBeaconKind;
 import com.wynntils.models.containers.type.MythicFind;
 import com.wynntils.models.lootrun.type.TaskLocation;
 import com.wynntils.utils.EnumUtils;
+import com.wynntils.utils.mc.type.Location;
 import com.wynntils.utils.type.CappedValue;
 import java.util.Comparator;
 import java.util.List;
@@ -40,6 +41,18 @@ public class LootrunFunctions {
         }
     }
 
+    public static class DryPullsFunction extends Function<Integer> {
+        @Override
+        public Integer getValue(FunctionArguments arguments) {
+            return Models.Lootrun.dryPulls.get();
+        }
+
+        @Override
+        protected List<String> getAliases() {
+            return List.of("dry_p", "dry_pulls_count");
+        }
+    }
+
     public static class HighestDryStreakFunction extends Function<Integer> {
         @Override
         public Integer getValue(FunctionArguments arguments) {
@@ -57,7 +70,7 @@ public class LootrunFunctions {
 
             if (mythicFinds.isEmpty()) return 0;
 
-            return mythicFinds.get(mythicFinds.size() - 1).dryCount();
+            return mythicFinds.getLast().dryCount();
         }
     }
 
@@ -68,7 +81,7 @@ public class LootrunFunctions {
 
             if (mythicFinds.isEmpty()) return "";
 
-            return mythicFinds.get(mythicFinds.size() - 1).itemName();
+            return mythicFinds.getLast().itemName();
         }
     }
 
@@ -96,10 +109,10 @@ public class LootrunFunctions {
         public Integer getValue(FunctionArguments arguments) {
             String color = arguments.getArgument("color").getStringValue();
 
-            BeaconColor beaconColor = BeaconColor.fromName(color);
-            if (beaconColor == null) return -1;
+            LootrunBeaconKind lootrunBeaconKind = LootrunBeaconKind.fromName(color);
+            if (lootrunBeaconKind == null) return -1;
 
-            return Models.Lootrun.getBeaconCount(beaconColor);
+            return Models.Lootrun.getBeaconCount(lootrunBeaconKind);
         }
 
         @Override
@@ -109,18 +122,56 @@ public class LootrunFunctions {
         }
     }
 
+    public static class LootrunMissionFunction extends Function<String> {
+        @Override
+        public String getValue(FunctionArguments arguments) {
+            int missionIndex = arguments.getArgument("index").getIntegerValue();
+            boolean colored = arguments.getArgument("colored").getBooleanValue();
+
+            return Models.Lootrun.getMissionStatus(missionIndex, colored);
+        }
+
+        @Override
+        public FunctionArguments.Builder getArgumentsBuilder() {
+            return new FunctionArguments.RequiredArgumentBuilder(List.of(
+                    new FunctionArguments.Argument<>("index", Integer.class, null),
+                    new FunctionArguments.Argument<>("colored", Boolean.class, null)));
+        }
+    }
+
     public static class LootrunTaskNameFunction extends Function<String> {
         @Override
         public String getValue(FunctionArguments arguments) {
             String color = arguments.getArgument("color").getStringValue();
 
-            BeaconColor beaconColor = BeaconColor.fromName(color);
-            if (beaconColor == null) return "";
+            LootrunBeaconKind lootrunBeaconKind = LootrunBeaconKind.fromName(color);
+            if (lootrunBeaconKind == null) return "";
 
-            TaskLocation taskLocation = Models.Lootrun.getTaskForColor(beaconColor);
+            TaskLocation taskLocation = Models.Lootrun.getTaskForColor(lootrunBeaconKind);
             if (taskLocation == null) return "";
 
             return taskLocation.name();
+        }
+
+        @Override
+        public FunctionArguments.Builder getArgumentsBuilder() {
+            return new FunctionArguments.RequiredArgumentBuilder(
+                    List.of(new FunctionArguments.Argument<>("color", String.class, null)));
+        }
+    }
+
+    public static class LootrunTaskLocationFunction extends Function<Location> {
+        @Override
+        public Location getValue(FunctionArguments arguments) {
+            String color = arguments.getArgument("color").getStringValue();
+
+            LootrunBeaconKind lootrunBeaconKind = LootrunBeaconKind.fromName(color);
+            if (lootrunBeaconKind == null) return new Location(0, 0, 0);
+
+            TaskLocation taskLocation = Models.Lootrun.getTaskForColor(lootrunBeaconKind);
+            if (taskLocation == null) return new Location(0, 0, 0);
+
+            return taskLocation.location();
         }
 
         @Override
@@ -135,10 +186,10 @@ public class LootrunFunctions {
         public String getValue(FunctionArguments arguments) {
             String color = arguments.getArgument("color").getStringValue();
 
-            BeaconColor beaconColor = BeaconColor.fromName(color);
-            if (beaconColor == null) return "";
+            LootrunBeaconKind lootrunBeaconKind = LootrunBeaconKind.fromName(color);
+            if (lootrunBeaconKind == null) return "";
 
-            TaskLocation taskLocation = Models.Lootrun.getTaskForColor(beaconColor);
+            TaskLocation taskLocation = Models.Lootrun.getTaskForColor(lootrunBeaconKind);
             if (taskLocation == null) return "";
 
             return EnumUtils.toNiceString(taskLocation.taskType());
@@ -168,10 +219,10 @@ public class LootrunFunctions {
     public static class LootrunLastSelectedBeaconColorFunction extends Function<String> {
         @Override
         public String getValue(FunctionArguments arguments) {
-            BeaconColor beaconColor = Models.Lootrun.getLastTaskBeaconColor();
-            if (beaconColor == null) return "";
+            LootrunBeaconKind lootrunBeaconKind = Models.Lootrun.getLastTaskBeaconColor();
+            if (lootrunBeaconKind == null) return "";
 
-            return EnumUtils.toNiceString(beaconColor);
+            return EnumUtils.toNiceString(lootrunBeaconKind);
         }
     }
 
